# VLSIProject

./: .gitignore  CMakeLists.txt  README.md  default.nix  flake.nix
include/: BufferInsertVG.h  FileHandler.h  JSONTools.h  VanGinneken.h
src/: BufferInsertVG.cpp  CMakeLists.txt  JSONTools.cpp  VanGinneken.cpp  main.cpp
tests/: CMakeLists.txt  JSONToolsTest.cpp
tests/data/: test01.json  test02.json  test03.json  test05.json  test06.json  test07.json  test08.json  test09.json  test10.json  test_new.json
